Almost working XMPP adapter

--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,7 @@ LogEntityName := Yes
 # In this section you can specify parameters that are passed to Test Ports.
 *.*.destIPAddr := "localhost"
 *.*.destPort := "5222"
+*.*.socket_debugging = "no"
 
 [DEFINE]
 # In this section you can create macro definitions,
@@ -43,6 +44,7 @@ LogEntityName := Yes
 
 [EXECUTE]
 # In this section you can specify what parts of your test suite you want to execute.
+xmpp_connect.control
 
 [GROUPS]
 # In this section you can specify groups of hosts. These groups can be used inside the
