--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,4 +3,6 @@ Django==1.8
 Markdown==2.6.2
 django-guardian==1.3
 
+# Django REST Framework
 djangorestframework==3.2.4
+djangorestframework-xml==1.2.0
