Added test case template and custom 404 page

--- a/ttcn3/config.cfg
+++ b/ttcn3/config.cfg
@@ -17,9 +17,6 @@ LogEntityName := Yes
 
 [TESTPORT_PARAMETERS]
 # In this section you can specify parameters that are passed to Test Ports.
-*.*.use_non_blocking_socket = "yes"
-*.*.http_debugging := "yes"
-*.*.use_notification_ASPs := "no"
 
 [DEFINE]
 # In this section you can create macro definitions,
@@ -44,7 +41,7 @@ LogEntityName := Yes
 
 [EXECUTE]
 # In this section you can specify what parts of your test suite you want to execute.
-http_connect.control
+check_status_codes.control
 
 [GROUPS]
 # In this section you can specify groups of hosts. These groups can be used inside the
