Improved test case template

--- a/ttcn3/config.cfg
+++ b/ttcn3/config.cfg
@@ -17,6 +17,7 @@ LogEntityName := Yes
 
 [TESTPORT_PARAMETERS]
 # In this section you can specify parameters that are passed to Test Ports.
+*.*.http_debugging := "yes"
 
 [DEFINE]
 # In this section you can create macro definitions,
